# uca-andor

./: .gitignore  CMakeLists.txt  uca-andor-camera.c  uca-andor-camera.h
cmake/: FindAtcore.cmake  FindAtutility.cmake
